@@ -56,6 +56,7 @@ import com.dpw.runner.shipment.services.masterdata.response.UnlocationsResponse;
 import com.dpw.runner.shipment.services.service.interfaces.IPackingService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.utils.CommonUtils;
+
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -66,6 +67,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -81,7 +83,7 @@ import static com.dpw.runner.shipment.services.utils.CommonUtils.setIsNullOrEmpt
 
 @Component
 @Slf4j
-public class AWBLabelReport extends IReport{
+public class AWBLabelReport extends IReport {
     @Autowired
     private JsonHelper jsonHelper;
 
@@ -96,30 +98,43 @@ public class AWBLabelReport extends IReport{
 
     @Autowired
     private IPackingService packingService;
+    private boolean isCombi;
+    private boolean isMawb;
+    private String remarks;
 
-    public void setMawb(boolean mawb) {
-        isMawb = mawb;
+    public static void populateMawb(Map<String, Object> dictionary, String mawb) {
+        if (mawb != null) {
+            mawb = mawb.replace("-", "");
+            if (mawb.length() < 11) mawb = appendZero(mawb, 11);
+            if (mawb.length() >= 3) dictionary.put(ReportConstants.MAWB13, mawb.substring(0, 3));
+            if (mawb.length() >= 7) dictionary.put(ReportConstants.MAWB47, mawb.substring(3, 7));
+            if (mawb.length() >= 11) dictionary.put(ReportConstants.MAWB811, mawb.substring(7));
+            dictionary.put(ReportConstants.MAWB_NUMBER, mawb);
+        } else {
+            dictionary.put(ReportConstants.MAWB_NUMBER, null);
+        }
     }
 
     public void setCombi(boolean combi) {
         isCombi = combi;
     }
 
-    public void setRemarks(String remarks) {
-        this.remarks = remarks;
-    }
-
     public boolean isMawb() {
         return isMawb;
+    }
+
+    public void setMawb(boolean mawb) {
+        isMawb = mawb;
     }
 
     public String getRemarks() {
         return remarks;
     }
 
-    private boolean isCombi;
-    private boolean isMawb;
-    private String remarks;
+    public void setRemarks(String remarks) {
+        this.remarks = remarks;
+    }
+
     @Override
     public Map<String, Object> getData(Long id) throws RunnerException {
         AWbLabelModel awbLabelModel = (AWbLabelModel) getDocumentModel(id);
@@ -129,16 +144,15 @@ public class AWBLabelReport extends IReport{
     @Override
     public IDocumentModel getDocumentModel(Long id) throws RunnerException {
         AWbLabelModel awbLabelModel = new AWbLabelModel();
-        if(isCombi) {
+        if (isCombi) {
             ConsolidationDetails consolidationDetails;
             Long consoleId;
-            if(isMawb) {
+            if (isMawb) {
                 consoleId = id;
                 consolidationDetails = getConsolidationsById(consoleId);
-            }
-            else {
+            } else {
                 ShipmentDetails shipmentDetails = getShipmentDetails(id);
-                if(setIsNullOrEmpty(shipmentDetails.getConsolidationList()))
+                if (setIsNullOrEmpty(shipmentDetails.getConsolidationList()))
                     throw new RunnerException("Please attach the consolidation before printing Combi Labels");
                 consoleId = shipmentDetails.getConsolidationList().iterator().next().getId();
                 consolidationDetails = getConsolidationsById(consoleId);
@@ -147,19 +161,18 @@ public class AWBLabelReport extends IReport{
             awbLabelModel.setAwb(getMawb(consoleId, true));
             awbLabelModel.getConsolidation().setConsoleGrossWeightAndUnit(getConsolGrossWeightAndUnit(awbLabelModel.getConsolidation()));
             awbLabelModel.setShipmentModels(new ArrayList<>());
-            if(!setIsNullOrEmpty(consolidationDetails.getShipmentsList())) {
-                for (ShipmentDetails shipmentDetails: consolidationDetails.getShipmentsList()) {
+            if (!setIsNullOrEmpty(consolidationDetails.getShipmentsList())) {
+                for (ShipmentDetails shipmentDetails : consolidationDetails.getShipmentsList()) {
                     awbLabelModel.getShipmentModels().add(getShipment(shipmentDetails));
                 }
             }
             isMawb = true;
         } else {
-            if(isMawb) {
+            if (isMawb) {
                 awbLabelModel.setConsolidation(getConsolidation(id));
                 awbLabelModel.setAwb(getMawb(id, true));
                 awbLabelModel.getConsolidation().setConsoleGrossWeightAndUnit(getConsolGrossWeightAndUnit(awbLabelModel.getConsolidation()));
-            }
-            else {
+            } else {
                 awbLabelModel.shipment = getShipment(id);
                 awbLabelModel.setAwb(getHawb(id));
                 validateAirAndOceanDGCheck(awbLabelModel.shipment);
@@ -176,8 +189,8 @@ public class AWBLabelReport extends IReport{
         Map<String, Object> dictionary = new HashMap<>();
         List<String> unlocations = new ArrayList<>();
 
-        if(awbLabelModel.shipment != null) {
-            if((awbLabelModel.getShipment().getTransportMode() != null && awbLabelModel.getShipment().getTransportMode().equals(AIR)) && (awbLabelModel.getShipment().getJobType() != null && awbLabelModel.getShipment().getJobType().equals("DRT")))
+        if (awbLabelModel.shipment != null) {
+            if ((awbLabelModel.getShipment().getTransportMode() != null && awbLabelModel.getShipment().getTransportMode().equals(AIR)) && (awbLabelModel.getShipment().getJobType() != null && awbLabelModel.getShipment().getJobType().equals("DRT")))
                 isMawb = true;
             String mawb = awbLabelModel.shipment.getMasterBill();
             V1TenantSettingsResponse v1TenantSettingsResponse = getCurrentTenantSettings();
@@ -219,24 +232,24 @@ public class AWBLabelReport extends IReport{
                 unlocations.add(awbLabelModel.shipment.getCarrierDetails().getDestination());
             if (awbLabelModel.shipment.getCarrierDetails() != null && awbLabelModel.shipment.getCarrierDetails().getDestinationPort() != null)
                 unlocations.add(awbLabelModel.shipment.getCarrierDetails().getDestinationPort());
-            dictionary.put(GROSS_WEIGHT_AND_UNIT, IReport.ConvertToWeightNumberFormat(awbLabelModel.shipment.getWeight(), v1TenantSettingsResponse) + " " +   convertToSingleCharWeightFormat(awbLabelModel.shipment.getWeightUnit()));
+            dictionary.put(GROSS_WEIGHT_AND_UNIT, IReport.ConvertToWeightNumberFormat(awbLabelModel.shipment.getWeight(), v1TenantSettingsResponse) + " " + convertToSingleCharWeightFormat(awbLabelModel.shipment.getWeightUnit()));
         }
-        if(awbLabelModel.getConsolidation() != null){
+        if (awbLabelModel.getConsolidation() != null) {
             String shippingLine = awbLabelModel.getConsolidation().getCarrierDetails() != null ? awbLabelModel.getConsolidation().getCarrierDetails().getShippingLine() : "";
-            if(!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
+            if (!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
                 dictionary.put(AIRLINE_NAME, shippingLine);
             }
-            if(awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestination() != null)
+            if (awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestination() != null)
                 unlocations.add(awbLabelModel.getConsolidation().getCarrierDetails().getDestination());
 
-            if(awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort() != null)
+            if (awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort() != null)
                 unlocations.add(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort());
 
             String totalGrossWeightAndUnit = awbLabelModel.getConsolidation().getConsoleGrossWeightAndUnit();
             String[] parts = totalGrossWeightAndUnit.split(" ");
             String totalGrossWeight = parts[0];
             String unit = parts[1];
-            dictionary.put(GROSS_WEIGHT_AND_UNIT, totalGrossWeight  + " " +   convertToSingleCharWeightFormat(unit));
+            dictionary.put(GROSS_WEIGHT_AND_UNIT, totalGrossWeight + " " + convertToSingleCharWeightFormat(unit));
         }
 
         if (!unlocations.isEmpty()) {
@@ -260,13 +273,13 @@ public class AWBLabelReport extends IReport{
         }
         dictionary.put(ReportConstants.AIR_LABEL_REMARKS, awbLabelModel.getRemarks());
         dictionary.put(ReportConstants.TENANT_NAME, awbLabelModel.getTenant() != null ? awbLabelModel.getTenant().getTenantName() : null);
-        if(awbLabelModel.shipment != null) {
+        if (awbLabelModel.shipment != null) {
             String shippingLine = awbLabelModel.getShipment().getCarrierDetails() != null ? awbLabelModel.getShipment().getCarrierDetails().getShippingLine() : "";
-            if(!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
+            if (!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
                 dictionary.put(CARRIER, shippingLine);
             }
             var unit = awbLabelModel.getShipment().getPackingList() == null || awbLabelModel.getShipment().getPackingList().isEmpty() ? "" : awbLabelModel.getShipment().getPackingList().get(0).getChargeableUnit();
-            var value = addCommasWithPrecision(getChargeable(awbLabelModel.getShipment().getPackingList()) , 2, false);
+            var value = addCommasWithPrecision(getChargeable(awbLabelModel.getShipment().getPackingList()), 2, false);
             dictionary.put(ReportConstants.TOTAL_WEIGHT_AND_UNIT, value + " " + awbLabelModel.getShipment().getChargeableUnit());
             //TODO
             try {
@@ -274,39 +287,39 @@ public class AWBLabelReport extends IReport{
                 PackSummaryResponse response = packingService.calculatePackSummary(packingList, awbLabelModel.getShipment().getTransportMode(), awbLabelModel.getShipment().getShipmentType(), new ShipmentMeasurementDetailsDto());
                 if (response != null)
                     dictionary.put(CHARGEABLE_WEIGHT_UNIT, response.getPacksChargeableWeight());
-            }catch (Exception e){
+            } catch (Exception e) {
                 dictionary.put(CHARGEABLE_WEIGHT_UNIT, "0");
             }
             dictionary.put(PACKS_UNIT, Constants.MPK.equals(awbLabelModel.shipment.getPacksUnit()) ? Constants.PACKAGES : awbLabelModel.shipment.getPacksUnit());
         }
-        if(awbLabelModel.getAwb() != null && awbLabelModel.getAwb().getAwbCargoInfo() != null) {
+        if (awbLabelModel.getAwb() != null && awbLabelModel.getAwb().getAwbCargoInfo() != null) {
             dictionary.put(ReportConstants.OTHER_INFORMATION, awbLabelModel.getAwb().getAwbCargoInfo().getOtherInfo());
             dictionary.put(ReportConstants.HANDLING_INFO, awbLabelModel.getAwb().getAwbCargoInfo().getHandlingInfo());
         }
 
         List<UnlocationsResponse> airLegs;
         List<RoutingsModel> routingsModels = null;
-        if(awbLabelModel.getConsolidation() != null){
+        if (awbLabelModel.getConsolidation() != null) {
             routingsModels = awbLabelModel.getConsolidation().getRoutingsList() == null ? Collections.emptyList() : awbLabelModel.getConsolidation().getRoutingsList().stream().filter(c -> c.getMode().equals(AIR)).filter(c -> !c.getPod().equalsIgnoreCase(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort())).toList();
-        }else if(awbLabelModel.getShipment() != null){
+        } else if (awbLabelModel.getShipment() != null) {
             routingsModels = awbLabelModel.shipment.getRoutingsList() == null ? Collections.emptyList() : awbLabelModel.shipment.getRoutingsList().stream().filter(c -> c.getMode().equals(AIR)).filter(c -> !c.getPod().equalsIgnoreCase(awbLabelModel.getShipment().getCarrierDetails().getDestinationPort())).toList();
         }
 
-        if(!CollectionUtils.isEmpty(routingsModels)) {
+        if (!CollectionUtils.isEmpty(routingsModels)) {
             airLegs = getUnlocationsResponses(routingsModels.stream().map(RoutingsModel::getPod).distinct().toList());
             Map<String, UnlocationsResponse> locationMap = new HashMap<>();
-            if(!airLegs.isEmpty()) {
-                for(UnlocationsResponse unlocationsResponse : airLegs) {
+            if (!airLegs.isEmpty()) {
+                for (UnlocationsResponse unlocationsResponse : airLegs) {
                     locationMap.put(unlocationsResponse.getLocationsReferenceGUID(), unlocationsResponse);
                 }
             }
             List<String> iataCodeList = new ArrayList<>();
             for (RoutingsModel routingsModel : routingsModels) {
-                if(locationMap.containsKey(routingsModel.getPod()) && !iataCodeList.contains(locationMap.get(routingsModel.getPod()).getIataCode())) {
+                if (locationMap.containsKey(routingsModel.getPod()) && !iataCodeList.contains(locationMap.get(routingsModel.getPod()).getIataCode())) {
                     iataCodeList.add(locationMap.get(routingsModel.getPod()).getIataCode());
                 }
             }
-            if(awbLabelModel.getConsolidation() != null) {
+            if (awbLabelModel.getConsolidation() != null) {
                 if (!iataCodeList.isEmpty())
                     dictionary.put(ReportConstants.CONSOL_FIRST_LEG_DESTINATION, iataCodeList.get(0));
                 if (iataCodeList.size() >= 2)
@@ -323,9 +336,9 @@ public class AWBLabelReport extends IReport{
             }
         }
 
-        if(awbLabelModel.getShipment() != null) {
+        if (awbLabelModel.getShipment() != null) {
             StringBuilder sb = new StringBuilder();
-            if(awbLabelModel.getShipment().getPackingList() != null) {
+            if (awbLabelModel.getShipment().getPackingList() != null) {
                 awbLabelModel.getShipment().getPackingList().forEach(packingModel -> {
                     var packs = Integer.parseInt(packingModel.getPacks() == null || packingModel.getPacks().isEmpty() ? "0" : packingModel.getPacks());
                     sb.append(packs).append(" ").append(packingModel.getPacksType()).append('\n');
@@ -339,27 +352,27 @@ public class AWBLabelReport extends IReport{
             UnlocationsResponse pol = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getOriginPort()) : null;
             UnlocationsResponse pod = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getDestinationPort()) : null;
             if (pod != null) {
-                if(pod.getIataCode() != null)
+                if (pod.getIataCode() != null)
                     dictionary.put(ReportConstants.POD_AIRPORT_CODE_IN_CAPS, pod.getIataCode().toUpperCase());
-                if(pod.getAirPortName() != null)
+                if (pod.getAirPortName() != null)
                     dictionary.put(ReportConstants.DESTINATION_PORT, pod.getAirPortName().toUpperCase());
             }
             if (pol != null) {
-                if(pol.getIataCode() != null)
+                if (pol.getIataCode() != null)
                     dictionary.put(ReportConstants.POL_AIRPORT_CODE_IN_CAPS, pol.getIataCode().toUpperCase());
-                if(pol.getAirPortName() != null)
+                if (pol.getAirPortName() != null)
                     dictionary.put(ReportConstants.ORIGIN_PORT, pol.getAirPortName().toUpperCase());
             }
         }
 
-        if(awbLabelModel.getConsolidation() != null){
+        if (awbLabelModel.getConsolidation() != null) {
             var mawb = awbLabelModel.getConsolidation().getMawb();
             populateMawb(dictionary, mawb);
             StringBuilder sb = new StringBuilder();
-            if(awbLabelModel.getConsolidation().getShipmentsList() != null) {
+            if (awbLabelModel.getConsolidation().getShipmentsList() != null) {
                 awbLabelModel.getConsolidation().getShipmentsList().forEach(shipment -> {
                     int packs = 0;
-                    if(shipment.getPackingList() != null)
+                    if (shipment.getPackingList() != null)
                         packs = shipment.getPackingList().stream().mapToInt(c -> Integer.parseInt((c.getPacks() == null || c.getPacks().isEmpty()) ? "0" : c.getPacks())).sum();
                     sb.append(shipment.getHouseBill()).append(" ").append(packs).append('\n');
                 });
@@ -387,8 +400,8 @@ public class AWBLabelReport extends IReport{
             }
         }
 
-        if(awbLabelModel.getAwb() != null) {
-            if(awbLabelModel.getConsolidation() == null)
+        if (awbLabelModel.getAwb() != null) {
+            if (awbLabelModel.getConsolidation() == null)
                 dictionary.put(ReportConstants.HAWB_CAPS, awbLabelModel.getShipment().getMasterBill());
             else {
                 dictionary.put(HAWB_CAPS, awbLabelModel.getConsolidation().getShipmentsList().stream().map(ShipmentModel::getHouseBill).collect(Collectors.joining(", ")));
@@ -396,13 +409,13 @@ public class AWBLabelReport extends IReport{
             }
         }
 
-        if(awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null) {
+        if (awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null) {
             try {
                 List<Packing> packingList = commonUtils.convertToList(awbLabelModel.getConsolidation().getPackingList(), Packing.class);
                 PackSummaryResponse response = packingService.calculatePackSummary(packingList, awbLabelModel.getConsolidation().getTransportMode(), awbLabelModel.getConsolidation().getContainerCategory(), new ShipmentMeasurementDetailsDto());
-                if(response != null)
+                if (response != null)
                     dictionary.put(ReportConstants.CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, response.getPacksChargeableWeight());
-            }catch (Exception e){
+            } catch (Exception e) {
                 dictionary.put(CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, "0");
             }
         }
@@ -410,32 +423,32 @@ public class AWBLabelReport extends IReport{
         if (awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null) {
             var totalPacks = 0;
             int size = awbLabelModel.getConsolidation().getPackingList().size();
-            for(int i = 0; i < size; i++) {
-                if(awbLabelModel.getConsolidation().getPackingList().get(i).getPacks() != null)
+            for (int i = 0; i < size; i++) {
+                if (awbLabelModel.getConsolidation().getPackingList().get(i).getPacks() != null)
                     totalPacks += Integer.parseInt(awbLabelModel.getConsolidation().getPackingList().get(i).getPacks());
             }
             dictionary.put(ReportConstants.TOTAL_CONSOL_PACKS, totalPacks);
             var packingModelList = awbLabelModel.getConsolidation().getPackingList().stream().filter(c -> c.getWeight() != null && c.getWeightUnit() != null).toList();
-            var value = addCommasWithPrecision(BigDecimal.valueOf(packingModelList.stream().mapToDouble(c -> c.getWeight().doubleValue()).sum()) , 2, false);
-            dictionary.put(CONSOL_TOTAL_WEIGHT_AND_UNIT,  value + " " + (!packingModelList.isEmpty() ? packingModelList.get(0).getWeightUnit() : null));
+            var value = addCommasWithPrecision(BigDecimal.valueOf(packingModelList.stream().mapToDouble(c -> c.getWeight().doubleValue()).sum()), 2, false);
+            dictionary.put(CONSOL_TOTAL_WEIGHT_AND_UNIT, value + " " + (!packingModelList.isEmpty() ? packingModelList.get(0).getWeightUnit() : null));
         }
         if (awbLabelModel.shipment != null && awbLabelModel.shipment.getPackingList() != null) {
             dictionary.put(ReportConstants.TOTAL_PACKS, awbLabelModel.shipment.getNoOfPacks());
         }
-        if(isCombi) {
+        if (isCombi) {
             dictionary.put(IS_COMBI, true);
             dictionary.put(ReportConstants.IS_MAWB, false);
             dictionary.put(ReportConstants.IS_HAWB, false);
             List<org.apache.commons.lang3.tuple.Pair<String, Integer>> hawbPacksList = new ArrayList<>();
-            if(!listIsNullOrEmpty(awbLabelModel.getShipmentModels())) {
-                for(ShipmentModel shipmentModel: awbLabelModel.getShipmentModels()) {
+            if (!listIsNullOrEmpty(awbLabelModel.getShipmentModels())) {
+                for (ShipmentModel shipmentModel : awbLabelModel.getShipmentModels()) {
                     int noOfPacks = 0;
-                    if(!listIsNullOrEmpty(shipmentModel.getPackingList())) {
-                        for(PackingModel packingModel: shipmentModel.getPackingList()) {
+                    if (!listIsNullOrEmpty(shipmentModel.getPackingList())) {
+                        for (PackingModel packingModel : shipmentModel.getPackingList()) {
                             noOfPacks = noOfPacks + Integer.parseInt(packingModel.getPacks());
                         }
                     }
-                    if(noOfPacks > 0)
+                    if (noOfPacks > 0)
                         hawbPacksList.add(Pair.of(shipmentModel.getHouseBill(), noOfPacks));
                 }
             }
@@ -445,7 +458,7 @@ public class AWBLabelReport extends IReport{
             dictionary.put(ReportConstants.IS_MAWB, this.isMawb);
             dictionary.put(ReportConstants.IS_HAWB, !this.isMawb);
         }
-        if(awbLabelModel.getShipment() != null && isMawb){
+        if (awbLabelModel.getShipment() != null && isMawb) {
             //DRT SHIPMENT
             dictionary.put(AIRLINE_NAME, dictionary.get(CARRIER));
             dictionary.put(CONSOL_DESTINATION_AIRPORT_CODE, dictionary.get(POD_AIRPORT_CODE_IN_CAPS));
@@ -469,36 +482,23 @@ public class AWBLabelReport extends IReport{
         return response.getTotalPacksWeight();
     }
 
-    public static void populateMawb(Map<String, Object> dictionary, String mawb) {
-        if (mawb != null) {
-            mawb = mawb.replace("-", "");
-            if (mawb.length() < 11) mawb = appendZero(mawb, 11);
-            if (mawb.length() >= 3) dictionary.put(ReportConstants.MAWB13, mawb.substring(0, 3));
-            if (mawb.length() >= 7) dictionary.put(ReportConstants.MAWB47, mawb.substring(3, 7));
-            if (mawb.length() >= 11) dictionary.put(ReportConstants.MAWB811, mawb.substring(7));
-            dictionary.put(ReportConstants.MAWB_NUMBER, mawb);
-        } else {
-            dictionary.put(ReportConstants.MAWB_NUMBER, null);
-        }
-    }
-
     private BigDecimal getChargeable(List<PackingModel> packingList) {
-        if(packingList == null || packingList.isEmpty())
+        if (packingList == null || packingList.isEmpty())
             return BigDecimal.ZERO;
         double value = 0;
-        for(var pack : packingList){
-            if(pack.getChargeable() != null)
+        for (var pack : packingList) {
+            if (pack.getChargeable() != null)
                 value += pack.getChargeable().doubleValue();
         }
         return BigDecimal.valueOf(value);
     }
 
     private List<UnlocationsResponse> getUnlocationsResponses(List<String> unlocations) {
-        if(unlocations.isEmpty()) return Collections.emptyList();
+        if (unlocations.isEmpty()) return Collections.emptyList();
         List<Object> criteria = Arrays.asList(
-                Arrays.asList(EntityTransferConstants.LOCATION_SERVICE_GUID),
+                List.of(EntityTransferConstants.LOCATION_SERVICE_GUID),
                 "In",
-                Arrays.asList(unlocations)
+                List.of(unlocations)
         );
         CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).criteriaRequests(criteria).build();
         V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
