@@ -36,22 +36,19 @@ import static com.dpw.runner.shipment.services.ReportingService.CommonUtils.Repo
 import static com.dpw.runner.shipment.services.ReportingService.CommonUtils.ReportHelper.getOrgAddress;
 
 @Component
-public class DeliveryOrderReport extends IReport{
+public class DeliveryOrderReport extends IReport {
 
+    public Boolean printWithoutTranslation;
     @Autowired
     private IV1Service v1Service;
     @Autowired
     private V1ServiceUtil v1ServiceUtil;
     @Autowired
     private ModelMapper modelMapper;
-
     @Autowired
     private JsonHelper jsonHelper;
-
     @Autowired
     private CommonUtils commonUtils;
-
-    public Boolean printWithoutTranslation;
 
     @Override
     public Map<String, Object> getData(Long id) {
@@ -74,32 +71,28 @@ public class DeliveryOrderReport extends IReport{
         validateAirAndOceanDGCheck(deliveryOrderModel.shipmentDetails);
         deliveryOrderModel.usersDto = UserContext.getUser();
         deliveryOrderModel.shipmentSettingsDetails = commonUtils.getShipmentSettingFromContext();
-        if(deliveryOrderModel.shipmentDetails.getConsolidationList() != null && deliveryOrderModel.shipmentDetails.getConsolidationList().size() > 0)
-        {
+        if (deliveryOrderModel.shipmentDetails.getConsolidationList() != null && deliveryOrderModel.shipmentDetails.getConsolidationList().size() > 0) {
             deliveryOrderModel.consolidationDetails = deliveryOrderModel.shipmentDetails.getConsolidationList().get(0);
             UnlocationsResponse placeOfIssue = null;
-            if(StringUtility.isNotEmpty(deliveryOrderModel.consolidationDetails.getPlaceOfIssue()))
-            {
+            if (StringUtility.isNotEmpty(deliveryOrderModel.consolidationDetails.getPlaceOfIssue())) {
                 List<Object> criteria = Arrays.asList(
-                        Arrays.asList(EntityTransferConstants.LOCATION_SERVICE_GUID),
+                        List.of(EntityTransferConstants.LOCATION_SERVICE_GUID),
                         "=",
                         deliveryOrderModel.consolidationDetails.getPlaceOfIssue()
                 );
                 CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).criteriaRequests(criteria).build();
                 V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
                 List<UnlocationsResponse> unlocationsResponse = jsonHelper.convertValueToList(v1DataResponse.entities, UnlocationsResponse.class);
-                if(unlocationsResponse.size() > 0)
+                if (unlocationsResponse.size() > 0)
                     placeOfIssue = unlocationsResponse.get(0);
-                if(placeOfIssue != null)
-                {
+                if (placeOfIssue != null) {
                     deliveryOrderModel.placeOfIssueName = placeOfIssue.getNameWoDiacritics();
                 }
             }
         }
         deliveryOrderModel.setContainers(new ArrayList<>());
-        if(deliveryOrderModel.shipmentDetails.getContainersList() != null)
-        {
-            for(ContainerModel container : deliveryOrderModel.shipmentDetails.getContainersList())
+        if (deliveryOrderModel.shipmentDetails.getContainersList() != null) {
+            for (ContainerModel container : deliveryOrderModel.shipmentDetails.getContainersList())
                 deliveryOrderModel.getContainers().add(getShipmentContainer(container));
         }
         MasterData masterData = getMasterListData(MasterDataType.PAYMENT, deliveryOrderModel.shipmentDetails.getPaymentTerms());
@@ -128,20 +121,21 @@ public class DeliveryOrderReport extends IReport{
         dictionary.put(ReportConstants.MASTER_BILL_ISSUE_PLACE, deliveryOrderModel.placeOfIssueName);
         dictionary.put(ReportConstants.PPCC, deliveryOrderModel.paymentTerms);
 
-        if(deliveryOrderModel.shipmentDetails.getAdditionalDetails() != null) {
+        if (deliveryOrderModel.shipmentDetails.getAdditionalDetails() != null) {
             dictionary.put(NOTIFY_PARTY, ReportHelper.getOrgAddressDetails(deliveryOrderModel.shipmentDetails.getAdditionalDetails().getNotifyParty()));
         }
         dictionary.put(ReportConstants.WEIGHT, ConvertToWeightNumberFormat(deliveryOrderModel.shipmentDetails.getWeight(), v1TenantSettingsResponse));
         dictionary.put(ReportConstants.VOLUME, ConvertToVolumeNumberFormat(deliveryOrderModel.shipmentDetails.getVolume(), v1TenantSettingsResponse));
         dictionary.put(ReportConstants.CHARGEABLE, ConvertToWeightNumberFormat(deliveryOrderModel.shipmentDetails.getChargable(), v1TenantSettingsResponse));
         dictionary.put(ReportConstants.NetWeight, ConvertToWeightNumberFormat(deliveryOrderModel.shipmentDetails.getNetWeight(), v1TenantSettingsResponse));
-        if(deliveryOrderModel.getContainers() != null && deliveryOrderModel.getContainers().size() > 0) {
+        if (deliveryOrderModel.getContainers() != null && deliveryOrderModel.getContainers().size() > 0) {
             List<Map<String, Object>> valuesContainer = new ArrayList<>();
             for (ShipmentContainers shipmentContainers : deliveryOrderModel.getContainers()) {
-                valuesContainer.add(jsonHelper.convertValue(shipmentContainers, new TypeReference<>() {}));
+                valuesContainer.add(jsonHelper.convertValue(shipmentContainers, new TypeReference<>() {
+                }));
             }
             for (Map<String, Object> v : valuesContainer) {
-                if(v.containsKey(ReportConstants.GROSS_VOLUME) && v.get(ReportConstants.GROSS_VOLUME) != null)
+                if (v.containsKey(ReportConstants.GROSS_VOLUME) && v.get(ReportConstants.GROSS_VOLUME) != null)
                     v.put(ReportConstants.GROSS_VOLUME, ConvertToVolumeNumberFormat(v.get(ReportConstants.GROSS_VOLUME), v1TenantSettingsResponse));
                 if (v.containsKey(ReportConstants.GROSS_WEIGHT) && v.get(ReportConstants.GROSS_WEIGHT) != null) {
                     String grossWeight = ConvertToWeightNumberFormat(v.get(ReportConstants.GROSS_WEIGHT), v1TenantSettingsResponse);
@@ -160,13 +154,13 @@ public class DeliveryOrderReport extends IReport{
 
         //Add P0 tags
         PickupDeliveryDetailsModel deliveryDetails = deliveryOrderModel.shipmentDetails.getDeliveryDetails();
-        if(deliveryDetails != null) {
+        if (deliveryDetails != null) {
             LocalDateTime deliveryTime = deliveryDetails.getActualPickupOrDelivery() != null ? deliveryDetails.getActualPickupOrDelivery() :
                     deliveryDetails.getEstimatedPickupOrDelivery();
-            dictionary.put(DELIVERY_TIME,  convertToDPWDateFormatWithTime(deliveryTime, v1TenantSettingsResponse.getDPWDateFormat(), true));
+            dictionary.put(DELIVERY_TIME, convertToDPWDateFormatWithTime(deliveryTime, v1TenantSettingsResponse.getDPWDateFormat(), true));
         }
 
-        if(!Objects.isNull(deliveryOrderModel.shipmentDetails.getPackingList()) && !deliveryOrderModel.shipmentDetails.getPackingList().isEmpty()) {
+        if (!Objects.isNull(deliveryOrderModel.shipmentDetails.getPackingList()) && !deliveryOrderModel.shipmentDetails.getPackingList().isEmpty()) {
             getPackingDetails(deliveryOrderModel.shipmentDetails, dictionary);
             dictionary.put(HAS_PACK_DETAILS, true);
             var hazardousCheck = deliveryOrderModel.shipmentDetails.getPackingList().stream().anyMatch(x -> !Objects.isNull(x.getHazardous()) && x.getHazardous());
@@ -186,21 +180,20 @@ public class DeliveryOrderReport extends IReport{
 
 //        getPackingDetails(deliveryOrderModel.shipmentDetails, dictionary);
 
-        if(dictionary.containsKey(CHARGES_SMALL) && dictionary.get(CHARGES_SMALL) instanceof List){
-            List<Map<String, Object>> values = (List<Map<String, Object>>)dictionary.get(CHARGES_SMALL);
-            for (Map<String, Object> v: values) {
-                if(v.containsKey(CHARGE_TYPE_CODE) && v.get(CHARGE_TYPE_CODE) != null) {
-                    v.put(CHARGE_TYPE_DESCRIPTION_LL, GetChargeTypeDescriptionLL((String)v.get(CHARGE_TYPE_CODE), chargeTypesWithoutTranslation));
+        if (dictionary.containsKey(CHARGES_SMALL) && dictionary.get(CHARGES_SMALL) instanceof List) {
+            List<Map<String, Object>> values = (List<Map<String, Object>>) dictionary.get(CHARGES_SMALL);
+            for (Map<String, Object> v : values) {
+                if (v.containsKey(CHARGE_TYPE_CODE) && v.get(CHARGE_TYPE_CODE) != null) {
+                    v.put(CHARGE_TYPE_DESCRIPTION_LL, GetChargeTypeDescriptionLL((String) v.get(CHARGE_TYPE_CODE), chargeTypesWithoutTranslation));
                 }
             }
         }
 
         PartiesModel deliveryTo = null;
 
-        if(deliveryOrderModel.shipmentDetails.getDeliveryDetails() != null)
+        if (deliveryOrderModel.shipmentDetails.getDeliveryDetails() != null)
             deliveryTo = deliveryOrderModel.shipmentDetails.getDeliveryDetails().getDestinationDetail();
-        if (deliveryTo != null && deliveryTo.getAddressData() != null)
-        {
+        if (deliveryTo != null && deliveryTo.getAddressData() != null) {
             Map<String, Object> addressMap = deliveryTo.getAddressData();
             populateAddress(addressMap, dictionary, ReportConstants.DeliveryTo);
             var address = getOrgAddress(getValueFromMap(addressMap, ORG_FULL_NAME), getValueFromMap(addressMap, ADDRESS1), getValueFromMap(addressMap, ADDRESS2),
@@ -229,19 +222,19 @@ public class DeliveryOrderReport extends IReport{
             dictionary.put(CHARGEABLE_AND_UNIT_, dictionary.get(CHARGEABLE_AND_UNIT));
         }
         PartiesModel client = deliveryOrderModel.shipmentDetails.getClient();
-        if(client != null && client.getAddressData() != null) {
+        if (client != null && client.getAddressData() != null) {
             Map<String, Object> addressMap = client.getAddressData();
             List<String> clientAddress = getOrgAddress(getValueFromMap(addressMap, COMPANY_NAME), getValueFromMap(addressMap, ADDRESS1), getValueFromMap(addressMap, ADDRESS2),
                     getCityCountry(getValueFromMap(addressMap, CITY), getValueFromMap(addressMap, COUNTRY)),
                     null, null);
-            if(!Boolean.TRUE.equals(deliveryOrderModel.shipmentSettingsDetails.getDisableBlPartiesName()) && getValueFromMap(addressMap, FULL_NAME) != null) {
+            if (!Boolean.TRUE.equals(deliveryOrderModel.shipmentSettingsDetails.getDisableBlPartiesName()) && getValueFromMap(addressMap, FULL_NAME) != null) {
                 clientAddress.add(0, getValueFromMap(addressMap, FULL_NAME));
             }
             dictionary.put(CLIENT_ADRS, clientAddress);
         }
 
-        if(!Objects.isNull(deliveryOrderModel.consolidationDetails) && !Objects.isNull(deliveryOrderModel.consolidationDetails.getArrivalDetails())) {
-            if(deliveryOrderModel.consolidationDetails.getArrivalDetails().getCTOId() != null)
+        if (!Objects.isNull(deliveryOrderModel.consolidationDetails) && !Objects.isNull(deliveryOrderModel.consolidationDetails.getArrivalDetails())) {
+            if (deliveryOrderModel.consolidationDetails.getArrivalDetails().getCTOId() != null)
                 dictionary.put(CTO_FULL_NAME, getValueFromMap(deliveryOrderModel.consolidationDetails.getArrivalDetails().getCTOId().getOrgData(), FULL_NAME));
         }
 
